--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
     <string name="made_by_lukatjee">Made by Lukatjee</string>
+    <string name="edit">Edit</string>
+    <string name="log_out">Log out</string>
+    <string name="save">Save</string>
 </resources>
