Profile picture integration
May save the url to the users photourl to allow smoother switching when it comes to changing usernames

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Telegram</string>
+    <string name="app_name">Zorion</string>
     <string name="txtViewUsername">E-mail:</string>
     <string name="txtViewPassword">Password:</string>
     <string name="buttonTxt">Log in</string>
